--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.class
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -46,3 +48,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 *.zip
+/target/
